[package]
name = "query-curve"
description = "A Rust library for querying custom Bezier curves, compatible with curves created at https://querycurve.com."
keywords = ["curve", "bezier", "query", "math"]
categories = ["mathematics", "algorithms", "data-processing"]
version = "0.1.0"
authors = ["Tomas Savigliano <ralusek@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ralusek/query-curve"
homepage = "https://querycurve.com/"

[dependencies]
regex = "1"
num-bigint = "0.4"
num-traits = "0.2"
